[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Utilise les dépendances du workspace
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal", "macros", "uuid"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.0"
lazy_static = "1.4"