[package]
name = "db"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] } 
bigdecimal = { version = "0.4.8", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal", "macros", "uuid"] }

validator = { version = "0.20.0", features = ["derive"] }
regex = "1.0"

lazy_static = "1.4"