[package]
name = "db"
version = "0.3.0"
edition = "2021"

[dependencies]
# type
chrono = { version = "0.4", features = ["serde"] } 
bigdecimal = { version = "0.4.8", features = ["serde"] }
uuid = "1.18.1"

# serde for jsonb
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# sql
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal", "macros", "uuid"] }

# validator
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.0"

# lazy_static for shared regexes
once_cell = "1.20.0"
dotenvy = "0.15.7"
